# Landing

./: .gitignore  2  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: deploy-pages.yml  deploy.yml
src/: App.vue  main.js
src/components/: ButtonLink.vue  Card.vue  Clock.vue  ContentCard.vue  Counter.vue  FlipNum.vue  GoogleSearch.vue  GridCard.vue  Icon.vue  QuickAccess.vue  QuickItem.vue  ScrollSelector.vue  ServerLink.vue  WindowManager.vue  WindowSelector.vue
src/components/windows/: AboutMe.vue  Blocks.vue  CurrentProjects.vue  DevServers.vue  Home.vue  Info.vue  News.vue  Pricing.vue  QuickLinks.vue  Settings.vue  Stars.vue
src/composables/: useEventBus.js  useLink.js  useStarSystem.js  useWindowManager.js
src/views/: HomeView.vue
wasm/: Cargo.toml
wasm/src/: basic_stars.rs  lib.rs  night_sky.rs  run.rs  star.rs  star_render.rs  star_system.rs  stars.wgsl  system_options.rs  utils.rs
wasm/src/basic/: mod.rs  sky.rs  star.rs
wasm/src/gpu/: mod.rs  run.rs  state.rs  vertex.rs
wasm/src/nightsky/: circle.rs  compute.wgsl  fragment.wgsl  mod.rs  pipeline.rs  screen.rs  sky.rs  star.rs  utils.rs  vertex.wgsl
