[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.76"
log = "0.4.22"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "Gpu"] }
wgpu = { version = "23.0.1", features = ["webgl"] }
winit = { version = "0.29", features = ["rwh_05"] }

[lib]
crate-type = ["cdylib"]
